package creational.abstract_factory;

/**
 * Interface para produto exército
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 20/12/2021
 */
public interface Exercito {

	String getDescricao();
}
